--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
                     </div>
                     <div class="btn2 select2">
                         <a href="https://www.asics.co.kr/main/index">Original Site</a>
-                        <a href="ascis/index.html">View Website</a>
+                        <a href="#">View Website</a>
                     </div>
                     <div class="btn3 select3">
                         <a href="#">Original Site</a>
