--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Crete+Round&family=Libre+Baskerville:wght@700&family=Open+Sans&family=Patua+One&family=Playfair+Display:wght@500&family=Roboto&family=Song+Myung&family=Young+Serif&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Crete+Round&family=Open+Sans&family=Patua+One&family=Playfair+Display:wght@500&family=Roboto&family=Song+Myung&family=Young+Serif&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/style.css">
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script src="script/script.js"></script>
     </head>
