--- a/ascis/sub.html
+++ b/ascis/sub.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>아식스 리디자인 - 서브페이지</title>
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="stylesheet" href="css/style.css"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="js/script.js" type="text/javascript"></script>
+    <!-- <script src="js/script.js" type="text/javascript"></script> -->
 </head>
 <body>
     <!-- 마우스 커서 아이콘 -->
@@ -54,6 +54,42 @@
                 <span>MENU</span>
                 <img src="images/small-logo.png" alt="메뉴 로고">
             </a>
+        </div>
+        <div class="section-wrap">
+            <!-- 아식스 x 발라홀릭 영역 -->
+            <section id="ballaholic">
+                <div id="ballaholic-element">
+                    <div id="ball-shoes">
+                        <img src="" alt="">
+                    </div>
+                    <div id="ball-logo">
+                        <div class="asics-logo"></div>
+                        <span></span>
+                        <div class="ballaholic-logo"></div>
+                    </div>
+                    <div id="ball-model">
+                        <img src="" alt="">
+                    </div>
+                    <div id="more-btn1">
+                        <a href="#">more →</a>
+                    </div>
+                </div>
+                <div id="ballaholic-explain">
+                    <div id="ballaholix-title">
+                        <img src="" alt="">
+                    </div>
+                    <div id="explain-content">
+                        <span></span>
+                        <p>1989년 미국에서 만들어진 농구화 ‘젤 익스트림(GEL-Extreme)’을 모델로 진행됩니다. 클래식을 키워드로 한 디자인의 컬러는 <br>
+                            발라홀릭의 장난기 넘치는 정신과 언제든 영원히 착용할 수 있다는 보편적 가치를 표현했습니다.
+                        </p>
+                    </div>
+                </div>
+            </section>
+            <!-- 아식스 x 할스튜디오스 영역 -->
+            <section id="halstudios">
+
+            </section>
         </div>
     </div>
 </body>
