--- a/ascis/index.html
+++ b/ascis/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="js/script.js" type="text/javascript"></script>
+    <script src="js/script.js"></script>
 </head>
 <body>
     <!-- 마우스 커서 아이콘 -->
