--- a/ascis/sub.html
+++ b/ascis/sub.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>아식스 리디자인 - 서브페이지</title>
     <link rel="stylesheet" href="css/reset.css">
-    <!-- <link rel="stylesheet" href="css/style.css"> -->
+    <link rel="stylesheet" href="css/sub.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <!-- <script src="js/script.js" type="text/javascript"></script> -->
+    <script src="js/script.js"></script>
 </head>
 <body>
     <!-- 마우스 커서 아이콘 -->
