--- a/ascis/sub.html
+++ b/ascis/sub.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/sub.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="js/script.js"></script>
+    <script src="js/subscript.js"></script>
 </head>
 <body>
     <!-- 마우스 커서 아이콘 -->
@@ -76,7 +76,10 @@
                 </div>
                 <div id="ballaholic-explain">
                     <div id="ballaholix-title">
-                        <img src="" alt="">
+                        <h2>
+                            <span class="fill">asics x ballahoilc ex89</span>
+                            collaboration
+                        </h2>
                     </div>
                     <div id="explain-content">
                         <span></span>
@@ -88,7 +91,169 @@
             </section>
             <!-- 아식스 x 할스튜디오스 영역 -->
             <section id="halstudios">
+                <div id="hal-shoes1">
+                    <img src="" alt="">
+                </div>
+                <div id="halstudios-title">
+                    <div id="hal-asics-logo">
+                        <div class="asics-logo"></div>
+                        <span></span>
+                        <div class="hal-logo"></div>
+                    </div>
+                    <p id="halstudios-explain">
+                        호주의 부티크 Highs and Lows(HAL STUDIO)는 ASICS와 GEL-1130™에 공동 참여
+                    </p>
+                </div>
+                <div id="hal-shoes2">
+                    <img src="" alt="">
+                </div>
+            </section>
+            <!-- 아식스 x 스니커즈 폴리틱스 영역 -->
+            <section id="snickers-politics">
+                <div id="sneakers-politics-title">
+                    <p class="sp-explain">
+                        *Sneaker Politics와 공동으로 디자인 한 GEL-LYTE® III OG 운동화는 창립자인 Derek Curry가 군대에서 보낸 시간에서 영감을 얻었습니다.
+                    </p>
+                    <p class="sp-title">
+                        asics x Sneakers-Politics
+                        <span></span>
+                    </p>
+                </div>
+                <ul id="sp-itemlist1">
+                    <li>
+                        <img src="" alt="sp-list1">
+                        <img src="" alt="sp-list5">
+                    </li>
+                    <li>
+                        <img src="" alt="sp-list2">
+                        <img src="" alt="sp-list6">
+                    </li>
+                    <li>
+                        <img src="" alt="sp-list3">
+                        <img src="" alt="sp-list7">
+                    </li>
+                    <li>
+                        <img src="" alt="sp-list4">
+                        <img src="" alt="sp-list8">
+                    </li>
+                    <button>▶︎</button>
+                </ul>
+            </section>
+            <!-- 아식스 x JJJ자운드 영역 -->
+            <section id="jjjjound">
+                <div id="jjj-shoes">
+                    <img src="" alt="">
+                </div>
+                <div id="jjjjound-model">
+                    <div id="jjj-model1">
+                        <img src="" alt="">
+                    </div>
+                    <div id="jjj-model2">
+                        <img src="" alt="">
+                    </div>
+                    <div id="jjjjound-logo">
+                        <div class="jjj-asics_logo">
+                            <img src="" alt="">
+                        </div>
+                        <p>X</p>
+                        <div class="jjjjound-logo">
+                            <span>JJJ자운드 | 캐나다 몬트리올 퀘벡을 기반으로 하는 디자인 스튜디오.</span>
+                            <img src="" alt="">
+                        </div>
+                        <button class="about-btn">
+                            <h3>About</h3>
+                            <span>
+                                아식스와 JJJ자운드의 협업 에디션은 2가지 컬러로 만날 수 있다. 두 컬러 모두 선명한 화이트 컬러 메시, <br>
+                                실버 컬러를 더한 메탈릭한 오버레이와 전체적으로 디보싱 처리한 디테일이 특징이다. 이번 협업의 모델이 된 <br>
+                                젤 카야노 14는 29년째 아식스를 대표하고 있는 베스트셀러 젤 카야노 14의 14번째 에디션이다. <br>
+                                젤 기술 쿠셔닝이 적용된 미드솔, 메시 구조의 어퍼 소재로 편안한 핏을 느낄 수 있다.
+                            </span>
+                        </button>
+                    </div>
+                    <div id="jjj-shoes2">
+                        <ul>
+                            <li>
+                                <img src="" alt="">
+                                <span></span>
+                                <p>Jel-Kayano 14 white</p>
+                            </li>
+                            <li>
+                                <img src="" alt="">
+                                <span></span>
+                                <p>sJel-Kayano 14 silvers</p>
+                            </li>
+                        </ul>
+                    </div>
+                    <div id="jjj-shoes3">
+                        <img src="" alt="">
+                    </div>
+                </div>
 
+            </section>
+            <!-- 아식스 x 어퓨 젤라이트 3, 아식스 x I4p 영역 -->
+            <section id="afew-i4p">
+
+            </section>
+            <!-- 아식스 x 비비안웨스트우드 영역 -->
+            <section id="vivienne">
+
+            </section>
+            <!-- 아식스 x 누레이블 영역 -->
+            <section id="nulabel">
+
+            </section>
+            <!-- 푸터 영역 -->
+            <section id="footer">
+                <ul id="footer-wrap">
+                    <li id="ft-logo">
+                        <a href="#">
+                            <img src="images/logo.png" alt="아식스 푸터로고">
+                        </a>
+                    </li>
+                    <ul class="menu-list">
+                        <li><a href="#">고객센터</a></li>
+                        <li><a href="#">공지사항</a></li>
+                        <li><a href="#">문의하기</a></li>
+                        <li><a href="#">주문조회</a></li>
+                        <li><a href="#">FAQ</a></li>
+                        <li><a href="#">사이즈가이드</a></li>
+                    </ul>
+                    <ul class="menu-list">
+                        <li><a href="#">회사소개</a></li>
+                        <li><a href="#">ABOUT ASICS</a></li>
+                        <li><a href="#">Sustainability</a></li>
+                        <li><a href="#">Carbon</a></li>
+                        <li><a href="#">Footprint</a></li>
+                        <li><a href="#">More Every Mind</a></li>
+                    </ul>
+                    <li class="menu-list">사이트 맵</li>
+                    <li class="menu-list">매장찾기</li>
+                    <!-- <li id="ft-menu">
+                    </li> -->
+                    <ul id="ft-info">
+                        <ul class="info-list">
+                            <li><a href="#">이용약관</a></li>
+                            <li><a href="#">쿠키규정</a></li>
+                            <li><a href="#">아식스코리아 개인정보처리방침</a></li>
+                        </ul>
+                        <li class="info-list">고객상담실 :&nbsp;<span>080-929-3535</span> <span>080-940-3535</span></li>
+                        <li class="info-list">운영시간 : 월~금 AM 10:00 ~ PM 17:00</li>
+                        <li class="info-list">점심시간 : PM 12:00 ~ PM 13:00</li>
+                        <li class="info-list">*공휴일은 고객상담실 휴무입니다</li>
+                    </ul>
+                </ul>
+                <div id="footer-copyright">
+                    <ul class="copy">
+                        <li class="first">(주) 아식스코리아</li>
+                        <li>대표: 김원무</li>
+                        <li>주소: 서울특별시 중구 을지로5길 16(삼화타워) 14F</li>
+                        <li>고객 상담실 : (080) 930-3535 사업자등록번호 : 109-86-10809</li>
+                        <li class="first">통신판매신고번호 : 2018-서울중구-0740</li>
+                        <li>E-mail : customercare-kr@asics.com</li>
+                        <li><a href="#">사업자 정보 확인</a></li> <br>
+                        <li class="first">ⓒ 2020 ASICS Korea</li>
+                    </ul>
+                </div>
             </section>
         </div>
     </div>
