--- a/ascis/index.html
+++ b/ascis/index.html
@@ -33,7 +33,7 @@
         </ul>
         <div id="search">
             <div id="search-box">
-                <input type="text" class="search-box" placeholder="텍스트를 입력하세요">
+                <input type="text" id="name" class="search-box" placeholder="텍스트를 입력하세요" autocomplete="off">
                 <button class="zoom">
                     <i class="fas fa-search"></i> <!-- 돋보기 아이콘 -->
                 </button>
@@ -314,7 +314,7 @@
                 <div id="membership-title">
                     <p>ASCIS KOREA MEMBERSHIP</p>
                     <div class="signin-btn">
-                        <a href="#">회원가입</a>
+                        <a href="sub.html">회원가입</a>
                     </div>
                 </div>
                 <div id="membership-txt">
@@ -327,7 +327,7 @@
             <div id="collab-top">
                 <h1>COLLABORATION</h1>
                 <div id="more-btn2">
-                    <a href="#">MORE</a>
+                    <a href="sub.html">MORE</a>
                 </div>
             </div>
             <ul id="collab-list1">
@@ -472,32 +472,32 @@
                 </div>
             </div>
             <div id="more-btn3">
-                <a href="#">MORE</a>
+                <a href="sub.html">MORE</a>
             </div>
         </section>
         <!-- 푸터 영역 -->
         <section id="footer">
             <ul id="footer-wrap">
                 <li id="ft-logo">
-                    <a href="#">
+                    <a href="sub.html">
                         <img src="images/logo.png" alt="아식스 푸터로고">
                     </a>
                 </li>
                 <ul class="menu-list">
-                    <li><a href="#">고객센터</a></li>
-                    <li><a href="#">공지사항</a></li>
-                    <li><a href="#">문의하기</a></li>
-                    <li><a href="#">주문조회</a></li>
-                    <li><a href="#">FAQ</a></li>
-                    <li><a href="#">사이즈가이드</a></li>
+                    <li><a href="sub.html">고객센터</a></li>
+                    <li><a href="sub.html">공지사항</a></li>
+                    <li><a href="sub.html">문의하기</a></li>
+                    <li><a href="sub.html">주문조회</a></li>
+                    <li><a href="sub.html">FAQ</a></li>
+                    <li><a href="sub.html">사이즈가이드</a></li>
                 </ul>
                 <ul class="menu-list">
-                    <li><a href="#">회사소개</a></li>
-                    <li><a href="#">ABOUT ASICS</a></li>
-                    <li><a href="#">Sustainability</a></li>
-                    <li><a href="#">Carbon</a></li>
-                    <li><a href="#">Footprint</a></li>
-                    <li><a href="#">More Every Mind</a></li>
+                    <li><a href="sub.html">회사소개</a></li>
+                    <li><a href="sub.html">ABOUT ASICS</a></li>
+                    <li><a href="sub.html">Sustainability</a></li>
+                    <li><a href="sub.html">Carbon</a></li>
+                    <li><a href="sub.html">Footprint</a></li>
+                    <li><a href="sub.html">More Every Mind</a></li>
                 </ul>
                 <li class="menu-list">사이트 맵</li>
                 <li class="menu-list">매장찾기</li>
@@ -505,9 +505,9 @@
                 </li> -->
                 <ul id="ft-info">
                     <ul class="info-list">
-                        <li><a href="#">이용약관</a></li>
-                        <li><a href="#">쿠키규정</a></li>
-                        <li><a href="#">아식스코리아 개인정보처리방침</a></li>
+                        <li><a href="sub.html">이용약관</a></li>
+                        <li><a href="sub.html">쿠키규정</a></li>
+                        <li><a href="sub.html">아식스코리아 개인정보처리방침</a></li>
                     </ul>
                     <li class="info-list">고객상담실 :&nbsp;<span>080-929-3535</span> <span>080-940-3535</span></li>
                     <li class="info-list">운영시간 : 월~금 AM 10:00 ~ PM 17:00</li>
@@ -523,7 +523,7 @@
                     <li>고객 상담실 : (080) 930-3535 사업자등록번호 : 109-86-10809</li>
                     <li class="first">통신판매신고번호 : 2018-서울중구-0740</li>
                     <li>E-mail : customercare-kr@asics.com</li>
-                    <li><a href="#">사업자 정보 확인</a></li> <br>
+                    <li><a href="sub.html">사업자 정보 확인</a></li> <br>
                     <li class="first">ⓒ 2020 ASICS Korea</li>
                 </ul>
             </div>
