--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                         <div class="profile">
                             <!-- 프로필 이미지 -->
                             <div class="profile-img">
-                                <img src="images/profile-image" alt="프로필 이미지">
+                                <img src="images/profile-image.png" alt="프로필 이미지">
                             </div>
                             
                             <!-- 프로필(이름,출생년도,전화번호,이메일) -->
