--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
                         <div id="asics">
                             <div id="asics-tesktop">
                                 <img src="images/asics-tesktop.png" alt="아식스 테스크톱">
-                                <div class="web-tooltip2">#고정형 #메인페이지</div>
+                                <div class="web-tooltip2">#고정형 #메인페이지 #서브페이지</div>
                             </div>
                         </div>
                     </div>
