--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                             <h2>License</h2>
                             <ul>
                                 <li>
-                                    <span>2023.08</span>
+                                    <span>2023.09</span>
                                     웹디자인기능사
                                 </li>
                                 <li>
@@ -177,7 +177,7 @@
                                     자동차운전면허증 2종보통
                                 </li>
                                 <li>
-                                    <span>2023.03</span>
+                                    <span>2023.04</span>
                                     컴퓨터그래픽스운용기능사
                                 </li>
                                 <li>
@@ -185,7 +185,7 @@
                                     ACP 포토샵/일러스트 자격증
                                 </li>
                                 <li>
-                                    <span>2022.12</span>
+                                    <span>2022.11</span>
                                     조선대학교 it 페스티벌 동상
                                 </li>
                                 <li>
@@ -443,7 +443,7 @@
                         <div id="asics">
                             <div id="asics-tesktop">
                                 <img src="images/asics-tesktop.png" alt="아식스 테스크톱">
-                                <div class="web-tooltip2">#고정형 #메인페이지 #서브페이지</div>
+                                <div class="web-tooltip2">#고정형(1920x1080) #메인페이지 #서브페이지</div>
                             </div>
                         </div>
                     </div>
