--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                                 </li>
                                 <li>
                                     <span>2022.11</span>
-                                    조선대학교 it 페스티벌 동상
+                                    조선대학교 IT 페스티벌 동상
                                 </li>
                                 <li>
                                     <span>2022.04</span>
