--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
         <link rel="stylesheet" href="css/reset.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Crete+Round&family=Libre+Baskerville:wght@700&family=Open+Sans&family=Patua+One&family=Playfair+Display:wght@500&family=Roboto&family=Song+Myung&family=Young+Serif&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Crete+Round&family=Open+Sans&family=Patua+One&family=Playfair+Display:wght@500&family=Roboto&family=Song+Myung&family=Young+Serif&display=swap" rel="stylesheet">
+        <!-- <link href="https://fonts.googleapis.com/css2?family=Crete+Round&family=Libre+Baskerville:wght@700&family=Open+Sans&family=Patua+One&family=Playfair+Display:wght@500&family=Roboto&family=Song+Myung&family=Young+Serif&display=swap" rel="stylesheet"> -->
+        <!-- <link href="https://fonts.googleapis.com/css2?family=Crete+Round&family=Open+Sans&family=Patua+One&family=Playfair+Display:wght@500&family=Roboto&family=Song+Myung&family=Young+Serif&display=swap" rel="stylesheet"> -->
         <link rel="stylesheet" href="css/style.css">
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script src="script/script.js"></script>
     </head>
     <body>
-        <!-- 헤더: 네비게이션 -->
+        <!-- 헤더 - 네비게이션 -->
         <div id="top-nav">
             <div id="logo">
                 <a href="#front">
@@ -100,8 +100,6 @@
                         </div>
                     </div>
                 </div>
-                <!-- <div id="pf-center">
-                </div>     -->
             </section>
             
             <!-- 2.프로필 페이지 -->
@@ -192,10 +190,10 @@
                                     <span>2022.04</span>
                                     정보처리기사 필기
                                 </li>
-                                <li>
+                                <!-- <li>
                                     <span>2021.08</span>
                                     컴퓨터활용능력 1급 필기
-                                </li>
+                                </li> -->
                             </ul>
                         </div>
                         <!-- Skills -->
@@ -424,7 +422,6 @@
                         <ul>
                             <li class="pf web-1 active"><a>SCULPTOR RENEWAL</a></li>
                             <li class="pf web-2"><a>ASICS RENEWAL</a></li>
-                            <!-- <li class="pf web-3"><a>MANGOSIX RENEWAL</a></li> -->
                         </ul>
                     </div>
                     <div id="web-img">
