--- a/index.html
+++ b/index.html
@@ -168,11 +168,11 @@
                                 </li>
                                 <li>
                                     <span>2023.07</span>
-                                    GTQ 포토샵 1급 자격증
+                                    GTQ그래픽기술자격 1급(Photoshop) 자격증
                                 </li>
                                 <li>
                                     <span>2023.06</span>
-                                    자동차운전면허증 2종보통
+                                    자동차운전면허증 2종 보통
                                 </li>
                                 <li>
                                     <span>2023.04</span>
@@ -180,7 +180,7 @@
                                 </li>
                                 <li>
                                     <span>2023.02</span>
-                                    ACP 포토샵/일러스트 자격증
+                                    ACP Photoshop/Illustrator 자격증
                                 </li>
                                 <li>
                                     <span>2022.11</span>
@@ -279,7 +279,7 @@
                                     <p>
                                         저는 전자공학을 전공하면서 기술적인 이해와 문제 해결 <br>
                                         능력을 키워왔습니다. 대학 커리큘럼 과정에서데이터 구조, <br>
-                                        알고리즘, 네트워킹 및 데이터베이스 관련 기본개념을 교육 받고 <br>
+                                        알고리즘, 네트워킹 및 데이터베이스 관련 기본 개념을 교육받고 <br>
                                         3번의 프로젝트를 진행하면서 기술적 문제를 해결하고 <br>
                                         프로젝트의 어려움을 극복한 경험이 있습니다. <br>
                                         이러한 배경으로 웹 개발에서 사용되는 기술과 용어를 빠르게 <br>
@@ -298,19 +298,19 @@
                                         <ul>
                                             <li>
                                                 <span>2022.01 ~ 03</span>
-                                                오픈소스SW 팀 프로젝트 개발 참여
+                                                오픈소스 SW 팀 프로젝트 개발 참여
                                             </li>
                                             <li>
                                                 <span>2022.03 ~ 06</span>
-                                                산학캡스톤디자인1 팀 프로젝트 개발 참여
+                                                산학 캡스톤디자인 1 팀 프로젝트 개발 참여
                                             </li>
                                             <li>
                                                 <span>2022.07 ~ 08</span>
-                                                산학SW 팀 프로젝트 개발 참여
+                                                산학 SW 팀 프로젝트 개발 참여
                                             </li>
                                             <li>
                                                 <span>2022.09 ~ 12</span>
-                                                산학캡스톤디자인2 팀 프로젝트 개발 참여
+                                                산학 캡스톤디자인 2 팀 프로젝트 개발 참여
                                             </li>
                                         </ul>
                                     </div>
@@ -401,7 +401,7 @@
                             업그레이드했습니다. 이러한 변화는 브랜드의 핵심 가치와 철학을 <br>
                             유지하면서 기존의 심플한 디자인에 민감함 요소를 추가하여 상품을 <br>
                             눈에 띄게 만들었습니다. 이로써 소비자는 더 많은 관심을 <br>
-                            불러일으키고 구매욕구를 높일 것으로 예상됩니다. 브랜드의 <br>
+                            불러일으키고 구매 욕구를 높일 것으로 예상됩니다. 브랜드의 <br>
                             정체성을 유지하면서도 더 많은 고객을 매료시키는 디자인을<br>
                             업그레이드를 하고자 디자인하였습니다. <br>
                             
@@ -552,7 +552,7 @@
                                                 - 퍼스널 골격/체형, 컬러 진단을 통해 상품 선택 <br>
                                                 과정을 최적화하는 전문적인 기능을 제공합니다. <br>
                                                 이를 통해 상품 선택의 어려움을 겪는 고객들에게 <br>
-                                                신뢰성있는 온라인 쇼핑 경험을 제공하고, 구매자들이 <br>
+                                                신뢰성 있는 온라인 쇼핑 경험을 제공하고, 구매자들이 <br>
                                                 보다 효율적으로 원하는 제품을 찾을 수 있도록 합니다.<br>
                                             </p>
                                         </li>
@@ -743,7 +743,7 @@
                             <p>
                                 You Seung Yeon <br>
                                 ㅡ <br>
-                                <span>UI/UX DESIGNER</span> <br>
+                                <span>UI・UX Designer/Web publisher</span> <br>
                             </p>
                             <img src="images/card-light.png" alt="명함 조명">
                         </div>
