--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
         <link rel="stylesheet" href="css/reset.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <!-- <link href="https://fonts.googleapis.com/css2?family=Crete+Round&family=Libre+Baskerville:wght@700&family=Open+Sans&family=Patua+One&family=Playfair+Display:wght@500&family=Roboto&family=Song+Myung&family=Young+Serif&display=swap" rel="stylesheet"> -->
-        <!-- <link href="https://fonts.googleapis.com/css2?family=Crete+Round&family=Open+Sans&family=Patua+One&family=Playfair+Display:wght@500&family=Roboto&family=Song+Myung&family=Young+Serif&display=swap" rel="stylesheet"> -->
         <link rel="stylesheet" href="css/style.css">
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script src="script/script.js"></script>
@@ -24,7 +22,6 @@
             </div>
             <div id="nav">
                 <ul>
-                    <!-- <li><a href="#front">Home</a></li> -->
                     <li><a href="#profile">Profile</a></li>
                     <li><a href="#ability" class="nav-link">About</a></li>
                     <li><a href="#web-pf">Web</a></li>
@@ -85,9 +82,6 @@
                         <div class="light">
                             <img src="images/light.jpg" alt="조명 이미지">
                         </div>
-                        <!-- <div class="light-mobile">
-                            <img src="images/llight_mobile.jpg" alt="조명 이미지_모바일">
-                        </div> -->
                         <div class="introduce">
                             <p>
                                 A designer<br>
@@ -168,7 +162,7 @@
                                 </li>
                                 <li>
                                     <span>2023.07</span>
-                                    GTQ그래픽기술자격 1급(Photoshop) 자격증
+                                    GTQ 포토샵 1급
                                 </li>
                                 <li>
                                     <span>2023.06</span>
@@ -180,7 +174,7 @@
                                 </li>
                                 <li>
                                     <span>2023.02</span>
-                                    ACP Photoshop/Illustrator 자격증
+                                    ACP Photoshop/Illustrator
                                 </li>
                                 <li>
                                     <span>2022.11</span>
@@ -241,7 +235,6 @@
                                             <div class="fill2 fill-js"></div>
                                         </div>                                    
                                     </div>
-
                                 </div>
                             </div>
                         </div>
@@ -256,7 +249,7 @@
                     <div id="search-box">
                         <div class="search-left">
                             <img src="images/home_icon.png" alt="홈 아이콘">
-                            <p>Major in Electronic Enginnering</p>
+                            <p>Major in Electronic Engineering</p>
                         </div>
                         <div class="search-right">
                             <img src="images/close_icon.png" alt="닫기 아이콘" class="search-close">
@@ -270,7 +263,6 @@
                         <span id="line1"></span>
                         <div id="ab-txt">
                             <div id="ab-left">
-                                <!-- <span class="line"></span> -->
                                 <div class="about">
                                     <p>About me</p>
                                 </div>
@@ -384,7 +376,7 @@
                         <h3>web</h3>
                     </div>
                     <div id="title2">
-                        <h1>ASCIS RENEWAL</h1>
+                        <h1>ASICS RENEWAL</h1>
                     </div>
                     <div id="tool2">
                         <h3>Tool</h3>
@@ -399,7 +391,7 @@
                         <p>
                             아식스 브랜드를 보다 깊이 파헤치며, 브랜드 이미지와 상품 디자인을 <br>
                             업그레이드했습니다. 이러한 변화는 브랜드의 핵심 가치와 철학을 <br>
-                            유지하면서 기존의 심플한 디자인에 민감함 요소를 추가하여 상품을 <br>
+                            유지하면서 기존의 심플한 디자인에 민감한 요소를 추가하여 상품을 <br>
                             눈에 띄게 만들었습니다. 이로써 소비자는 더 많은 관심을 <br>
                             불러일으키고 구매 욕구를 높일 것으로 예상됩니다. 브랜드의 <br>
                             정체성을 유지하면서도 더 많은 고객을 매료시키는 디자인을<br>
@@ -478,7 +470,7 @@
                                     웃음과 힐링을 주고자 망구의 귀여운 표정과 <br>
                                     다양한 포즈를 생각해 작업했습니다.<br>
                                     머리 위의 새싹을 통해 망구의 개성과<br>
-                                    생기있는 이미지를 표현했습니다.<br>
+                                    생기 있는 이미지를 표현했습니다.<br>
                                 </p>
                             </div>
                         </div>
