--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link rel="stylesheet" href="css/style.css">
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-        <script src="script/script.js"></script>
+        <script src="js/script.js"></script>
     </head>
     <body>
         <!-- 헤더 - 네비게이션 -->
